@@ -9,7 +9,6 @@ internal_encoding=
 input_encoding=
 output_encoding=
 mbstring.internal_encoding=Shift_JIS
-mbstring.http_input=Shift_JIS
 mbstring.http_output=Shift_JIS
 --FILE--
 <?php
@@ -21,7 +20,6 @@ var_dump(ini_get('output_encoding'));
 
 var_dump(ini_get('mbstring.internal_encoding'));
 var_dump(mb_internal_encoding());
-var_dump(ini_get('mbstring.http_input'));
 var_dump(ini_get('mbstring.http_output'));
 
 echo "Setting INI\n";
@@ -30,7 +28,6 @@ var_dump(ini_set('internal_encoding', 'UTF-8'));
 var_dump(ini_set('input_encoding', 'UTF-8'));
 var_dump(ini_set('output_encoding', 'UTF-8'));
 var_dump(ini_set('mbstring.internal_encoding', 'UTF-8'));
-var_dump(ini_set('mbstring.http_input', 'UTF-8'));
 var_dump(ini_set('mbstring.http_output', 'UTF-8'));
 
 echo "Getting INI\n";
@@ -41,7 +38,6 @@ var_dump(ini_get('output_encoding'));
 
 var_dump(ini_get('mbstring.internal_encoding'));
 var_dump(mb_internal_encoding());
-var_dump(ini_get('mbstring.http_input'));
 var_dump(ini_get('mbstring.http_output'));
 ?>
 --EXPECT--
@@ -53,7 +49,6 @@ string(0) ""
 string(9) "Shift_JIS"
 string(4) "SJIS"
 string(9) "Shift_JIS"
-string(9) "Shift_JIS"
 Setting INI
 string(9) "Shift_JIS"
 string(0) ""
@@ -61,9 +56,7 @@ string(0) ""
 string(0) ""
 string(9) "Shift_JIS"
 string(9) "Shift_JIS"
-string(9) "Shift_JIS"
 Getting INI
-string(5) "UTF-8"
 string(5) "UTF-8"
 string(5) "UTF-8"
 string(5) "UTF-8"
