@@ -6,7 +6,6 @@ mbstring
 mbstring.language=UNKNOWN_LANGUAGE
 mbstring.internal_encoding=UNKNOWN_ENCODING
 mbstring.detect_order=UTF-8,DETECT_ORDER,ASCII
-mbstring.http_input=UTF-8,HTTP_INPUT,ASCII
 mbstring.http_output=HTTP_OUTPUT
 mbstring.http_output_conv_mimetypes=UNKNOWN_MIME_TYPE_OUTPUT
 mbstring.substitute_character=U+3000,NON_EXISTING_CHARACTER,JIS+7E7E
@@ -18,10 +17,6 @@ mbstring.strict_detection=BOOL_STRICT_DETECTION
 ?>
 --EXPECT--
 Warning: PHP Startup: INI setting contains invalid encoding "DETECT_ORDER" in Unknown on line 0
-
-Deprecated: PHP Startup: Use of mbstring.http_input is deprecated in Unknown on line 0
-
-Warning: PHP Startup: INI setting contains invalid encoding "HTTP_INPUT" in Unknown on line 0
 
 Deprecated: PHP Startup: Use of mbstring.http_output is deprecated in Unknown on line 0
 
