@@ -6,7 +6,6 @@ mbstring
 mbstring.encoding_translation=1
 mbstring.language=Korean
 mbstring.internal_encoding=UTF-8
-mbstring.http_input=ISO-8859-1
 mbstring.http_output=ISO-8859-15
 mbstring.http_output_conv_mimetypes=abc
 mbstring.detect_order=UTF-8,ISO-8859-15,ISO-8859-1,ASCII
@@ -23,8 +22,6 @@ foreach (array_keys($result) as $key) {
 }
 ?>
 --EXPECT--
-Deprecated: PHP Startup: Use of mbstring.http_input is deprecated in Unknown on line 0
-
 Deprecated: PHP Startup: Use of mbstring.http_output is deprecated in Unknown on line 0
 
 Deprecated: PHP Startup: Use of mbstring.internal_encoding is deprecated in Unknown on line 0
@@ -32,7 +29,7 @@ array(13) {
   ["internal_encoding"]=>
   string(5) "UTF-8"
   ["http_input"]=>
-  string(10) "ISO-8859-1"
+  string(5) "UTF-8"
   ["http_output"]=>
   string(11) "ISO-8859-15"
   ["http_output_conv_mimetypes"]=>
@@ -67,8 +64,8 @@ array(13) {
 }
 string(5) "UTF-8"
 string(5) "UTF-8"
-string(10) "ISO-8859-1"
-string(10) "ISO-8859-1"
+string(5) "UTF-8"
+string(5) "UTF-8"
 string(11) "ISO-8859-15"
 string(11) "ISO-8859-15"
 string(3) "abc"
