@@ -3,12 +3,9 @@ mb_parse_str() with multiple candidate encodings
 --EXTENSIONS--
 mbstring
 --INI--
-mbstring.http_input=UTF-8,SJIS,EUC-JP,ISO-8859-1,ISO-2022-JP
+input_encoding=UTF-8,SJIS,EUC-JP,ISO-8859-1,ISO-2022-JP
 --FILE--
 <?php
-// The encoding of the input strings will be guessed, from the list specified
-// via mbstring.http_input
-// All of them will be converted to UTF-8
 mb_internal_encoding('UTF-8');
 
 $queries = array(
@@ -35,7 +32,6 @@ foreach ($queries as $query) {
 
 ?>
 --EXPECTF--
-Deprecated: PHP Startup: Use of mbstring.http_input is deprecated in %s on line %d
 Query: e38386e382b9e383883d616263
 e38386e382b9e38388=>616263
 Query: 82a082a282a43d9356
